Fix some issues from backporting feature branch